United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6889740 G1: OpenDS fails with "unhandled exception in compiled code"
6889740 : G1: OpenDS fails with "unhandled exception in compiled code"

Details
Type:
Bug
Submit Date:
2009-10-08
Status:
Resolved
Updated Date:
2010-04-06
Project Name:
JDK
Resolved Date:
2009-11-11
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs16,hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:

Sub Tasks

Description
Running the OpenDS test fails with "unhandled exception in compiled code".

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/511f4c69c1be
                                     
2009-11-13
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/511f4c69c1be
                                     
2009-11-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/beb8f45ee9f0
                                     
2009-10-29
SUGGESTED FIX

http://cr.openjdk.java.net/~johnc/6889740/
                                     
2009-10-27
EVALUATION

Bad code gets generated for for the null case in the aastore bytecode template on x86.
                                     
2009-10-24



Hardware and Software, Engineered to Work Together